second commit extract features from images and save them in the disk for future use from RAM

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1919,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1928,31 +1928,16 @@
     "    feature_vector = model_new.predict(img)\n",
     "    feature_vector = feature_vector.reshape((-1,))\n",
     "    \n",
-    "    print(feature_vector.shape)\n",
+    "    \n",
     "    return feature_vector\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W0306 18:21:24.505345 18516 deprecation_wrapper.py:119] From C:\\Users\\vindyanchal\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2048,)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1960,13 +1945,172 @@
        "       0.86007434], dtype=float32)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "encode_img(path+\"1000268201_693b08cb0e.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " the encoding is in progress and currently on time step number 0\n",
+      " the encoding is in progress and currently on time step number 100\n",
+      " the encoding is in progress and currently on time step number 200\n",
+      " the encoding is in progress and currently on time step number 300\n",
+      " the encoding is in progress and currently on time step number 400\n",
+      " the encoding is in progress and currently on time step number 500\n",
+      " the encoding is in progress and currently on time step number 600\n",
+      " the encoding is in progress and currently on time step number 700\n",
+      " the encoding is in progress and currently on time step number 800\n",
+      " the encoding is in progress and currently on time step number 900\n",
+      " the encoding is in progress and currently on time step number 1000\n",
+      " the encoding is in progress and currently on time step number 1100\n",
+      " the encoding is in progress and currently on time step number 1200\n",
+      " the encoding is in progress and currently on time step number 1300\n",
+      " the encoding is in progress and currently on time step number 1400\n",
+      " the encoding is in progress and currently on time step number 1500\n",
+      " the encoding is in progress and currently on time step number 1600\n",
+      " the encoding is in progress and currently on time step number 1700\n",
+      " the encoding is in progress and currently on time step number 1800\n",
+      " the encoding is in progress and currently on time step number 1900\n",
+      " the encoding is in progress and currently on time step number 2000\n",
+      " the encoding is in progress and currently on time step number 2100\n",
+      " the encoding is in progress and currently on time step number 2200\n",
+      " the encoding is in progress and currently on time step number 2300\n",
+      " the encoding is in progress and currently on time step number 2400\n",
+      " the encoding is in progress and currently on time step number 2500\n",
+      " the encoding is in progress and currently on time step number 2600\n",
+      " the encoding is in progress and currently on time step number 2700\n",
+      " the encoding is in progress and currently on time step number 2800\n",
+      " the encoding is in progress and currently on time step number 2900\n",
+      " the encoding is in progress and currently on time step number 3000\n",
+      " the encoding is in progress and currently on time step number 3100\n",
+      " the encoding is in progress and currently on time step number 3200\n",
+      " the encoding is in progress and currently on time step number 3300\n",
+      " the encoding is in progress and currently on time step number 3400\n",
+      " the encoding is in progress and currently on time step number 3500\n",
+      " the encoding is in progress and currently on time step number 3600\n",
+      " the encoding is in progress and currently on time step number 3700\n",
+      " the encoding is in progress and currently on time step number 3800\n",
+      " the encoding is in progress and currently on time step number 3900\n",
+      " the encoding is in progress and currently on time step number 4000\n",
+      " the encoding is in progress and currently on time step number 4100\n",
+      " the encoding is in progress and currently on time step number 4200\n",
+      " the encoding is in progress and currently on time step number 4300\n",
+      " the encoding is in progress and currently on time step number 4400\n",
+      " the encoding is in progress and currently on time step number 4500\n",
+      " the encoding is in progress and currently on time step number 4600\n",
+      " the encoding is in progress and currently on time step number 4700\n",
+      " the encoding is in progress and currently on time step number 4800\n",
+      " the encoding is in progress and currently on time step number 4900\n",
+      " the encoding is in progress and currently on time step number 5000\n",
+      " the encoding is in progress and currently on time step number 5100\n",
+      " the encoding is in progress and currently on time step number 5200\n",
+      " the encoding is in progress and currently on time step number 5300\n",
+      " the encoding is in progress and currently on time step number 5400\n",
+      " the encoding is in progress and currently on time step number 5500\n",
+      " the encoding is in progress and currently on time step number 5600\n",
+      " the encoding is in progress and currently on time step number 5700\n",
+      " the encoding is in progress and currently on time step number 5800\n",
+      " the encoding is in progress and currently on time step number 5900\n",
+      " total time taken : 343.67094349861145\n"
+     ]
+    }
+   ],
+   "source": [
+    "# encoding all the train images\n",
+    "from time import time \n",
+    "\n",
+    "start_t = time()\n",
+    "encoding_train= {}\n",
+    "\n",
+    "for ix, img_name in enumerate(train):\n",
+    "    img_path = path + img_name + '.jpg'\n",
+    "    feature= encode_img(img_path)\n",
+    "    encoding_train[img_name]= feature\n",
+    "    if (ix%100 ==0):\n",
+    "        print( \" the encoding is in progress and currently on time step number %d\"%(ix))\n",
+    "\n",
+    "end_t  = time()\n",
+    "\n",
+    "print(\" total time taken :\", end_t- start_t )\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# store everything on the disk\n",
+    "import pickle # to store the ram as a file in the disk memory\n",
+    "\n",
+    "with open(\"encoded_train_features.pkl\",\"wb\") as f:\n",
+    "    pickle.dump(encoding_train,f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " the encoding is in progress and currently on time step number 0\n",
+      " the encoding is in progress and currently on time step number 100\n",
+      " the encoding is in progress and currently on time step number 200\n",
+      " the encoding is in progress and currently on time step number 300\n",
+      " the encoding is in progress and currently on time step number 400\n",
+      " the encoding is in progress and currently on time step number 500\n",
+      " the encoding is in progress and currently on time step number 600\n",
+      " the encoding is in progress and currently on time step number 700\n",
+      " the encoding is in progress and currently on time step number 800\n",
+      " the encoding is in progress and currently on time step number 900\n",
+      " total time taken : 36.06486225128174\n"
+     ]
+    }
+   ],
+   "source": [
+    "# encoding all the images\n",
+    "from time import time \n",
+    "\n",
+    "start_t = time()\n",
+    "encoding_test= {}\n",
+    "\n",
+    "for ix, img_name in enumerate(test):\n",
+    "    img_path = path + img_name + '.jpg'\n",
+    "    feature= encode_img(img_path)\n",
+    "    encoding_test[img_name]= feature\n",
+    "    if (ix%100 ==0):\n",
+    "        print( \" the encoding is in progress and currently on time step number %d\"%(ix))\n",
+    "\n",
+    "end_t  = time()\n",
+    "\n",
+    "print(\" total time taken :\", end_t- start_t )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"encoded_test_features.pkl\",\"wb\") as f:\n",
+    "    pickle.dump(encoding_test,f)"
    ]
   },
   {
