third commit :preprocessing captions

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2114,6 +2114,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data pre-processing for the captions "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1845\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(total_words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make an index to word and word to index dictionary \n",
+    "\n",
+    "wrd_to_idx = {}\n",
+    "idx_to_wrd = {}\n",
+    "\n",
+    "for idx, word in enumerate(total_words):\n",
+    "    wrd_to_idx[word]= idx+1\n",
+    "    idx_to_wrd[idx+1] = word\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dog\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(idx_to_wrd[6])\n",
+    "print(wrd_to_idx[\"dog\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1845\n",
+      "vocab size is  1848\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add startseq and endseq to the vocabulary \n",
+    "\n",
+    "print(len(wrd_to_idx))\n",
+    "wrd_to_idx[\"startseq\"] = 1846\n",
+    "wrd_to_idx[\"endseq\"] = 1847\n",
+    "\n",
+    "idx_to_wrd[1846] = \"startseq\"\n",
+    "idx_to_wrd[1847] = \"endseq\"\n",
+    "\n",
+    "print(\"vocab size is \", len(wrd_to_idx)+1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxlen = 0 \n",
+    "\n",
+    "for word,caption  in train_description.items():\n",
+    "    \n",
+    "    for i in range(len(caption)):\n",
+    "       \n",
+    "        maxlen = max(maxlen, len(caption[i].split()))\n",
+    "print(maxlen)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
